--- a/theme.css
+++ b/theme.css
@@ -4134,7 +4134,7 @@ em {
   max-width: 1200px;
   margin-right: auto;
   margin-left: auto;
-  padding: 40px;
+  padding: 40px 40px 40px 40px;
   grid-auto-columns: 1fr;
   grid-column-gap: 60px;
   grid-row-gap: 60px;
@@ -6261,7 +6261,7 @@ a{
   white-space: nowrap;
   padding: 5px 70px 5px 20px;
   background: transparent;
-  height: 30vh;
+  height: 40vh;
   border-radius:15px;
 }
 
@@ -6271,70 +6271,15 @@ a{
 
 .gridscroll img {
   margin-right:22px;
-  height:30vh;
+  height:40vh;
+  border-radius:15px;
 }
 
-.faq-heading{
-  border-bottom: #777;
-  padding: 20px 60px;
-}
-.faq-container{
-display: flex;
-justify-content: center;
-flex-direction: column;
-}
-.hr-line{
-width: 60%;
-margin: auto;
+.c{
+  display: flex;
+ align-items: center;
+ flex-direction: row;
+ justify-content: center;
 
-}
-/* Style the buttons that are used to open and close the faq-page body */
-.faq-page {
-  /* background-color: #eee; */
-  color: #444;
-  cursor: pointer;
-  padding: 30px 20px;
-  width: 60%;
-  border: none;
-  outline: none;
-  transition: 0.4s;
-  margin: auto;
-}
-.faq-body{
-  margin: auto;
-  /* text-align: center; */
- width: 50%; 
- padding: auto;
- 
-}
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active,
-.faq-page:hover {
-  background-color: #F9F9F9;
-}
-/* Style the faq-page panel. Note: hidden by default */
-.faq-body {
-  padding: 0 18px;
-  background-color: white;
-  display: block;
-  overflow: hidden;
-}
-.faq-page:after {
-  content: '\02795';
-  /* Unicode character for "plus" sign (+) */
-  font-size: 13px;
-  color: #777;
-  float: right;
-  margin-left: 5px;
-}
-.active:after {
-  content: "\2796";
-  /* Unicode character for "minus" sign (-) */
-}
-.phone{
-  display:none;
-}
-.comp{
-  display:block;
 }
 
